# Hackaton

NovaFitPlus/: .gitignore  CIUDAD_DASHBOARD_SOLUCIONADO.md  CLIMA_EMOJIS_MEJORAS.md  CLIMA_USUARIO_SOLUCIONADO.md  FINAL_ENHANCEMENTS_SUMMARY.md  GUI_ENHANCEMENTS.md  MANIFEST.in  README.md  ULTIMATE_ENHANCEMENTS_FINAL.md  bootstrap.py  debug_weather.py  gamification_Kevin.json  pyproject.toml  requirements.txt  setup.cfg  start_cli.bat  start_cli.sh  start_gui.bat  start_gui.sh  test_city_update.py  test_complete_workflow.py  test_gui_debug.py  test_save_profile_simulation.py  theme_config.json
NovaFitPlus/docs/: INTENT.md
NovaFitPlus/novafit_plus/: __init__.py  adaptive_theme.py  analysis.py  app.py  config.json  db.py  demo_data.py  export.py  gamification.py  hydration.py  modular_dashboard.py  profile.py  reports.py  seed.py  ui_enhancements.py  ui_tk.py  utils.py  weather.py
NovaFitPlus/tests/: test_app_config.py  test_date_logging.py  test_db.py  test_db_tail.py  test_reports.py
SinaloaDragon/: .gitignore  LICENSE  README.md  build_exe.bat  requirements.txt  run.bat  run_game.py  run_tests.py  setup.cfg  verify_project.py
SinaloaDragon/data/levels/: cdmx_centro.json  guadalajara_centro.json  oaxaca_monte.json
SinaloaDragon/src/: assets.py  config.py  game.py  generate_assets.py  input.py  main.py  save_system.py  settings.py
SinaloaDragon/src/ecs/: ai.py  combat.py  enemies.py  physics.py  player.py
SinaloaDragon/src/levels/: hazards.py  loader.py
SinaloaDragon/src/ui/: hud.py  menus.py
SinaloaDragon/tests/: conftest.py  test_basic.py  test_unit.py
