[metadata]
name = chen-toka-sinaloa-dragon
version = 1.0.0
description = Chen Toka — Sinaloa Dragon: Juego retro de acción y aventura 2D
long_description = file: README.md
long_description_content_type = text/markdown
author = Developers Institute Hackathon Team
author_email = contact@developersinsitute.com
url = https://github.com/developersinsitute/sinaloa-dragon
project_urls =
    Bug Reports = https://github.com/developersinsitute/sinaloa-dragon/issues
    Source = https://github.com/developersinsitute/sinaloa-dragon
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Topic :: Games/Entertainment :: Arcade
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.11
install_requires =
    pygame-ce>=2.5.0
    pygame>=2.6.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    chen-toka = main:main
    sinaloa-dragon = main:main

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-pygame>=1.0.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    env,
    venv

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[tool:pytest]
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
addopts = 
    -v
    --tb=short
    --strict-markers
    --strict-config
    --durations=10
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests